deploy/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stream-service
  namespace: go-app
  labels:
    app: stream-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stream-service
  template:
    metadata:
      labels:
        app: stream-service
    spec:
      containers:
        - name: stream
          image: xomrkob/stream:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: grpc-tls
              mountPath: /tls/grpc
              readOnly: true

          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: stream/health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: stream/health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
      volumes:
        - name: grpc-tls
          secret:
            secretName: grpc-stream-tls
