deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stream-service
  namespace: go-app
spec:
  selector:
    app: stream-service
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
